# SB03-p4

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/es8311/: CMakeLists.txt  README.md
components/sb03_snore_prebuilt/: CMakeLists.txt
components/sb03_snore_prebuilt/include/: sb03_snore_lib.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cc  audio_capture.cc  audio_capture.h  board_config.h  board_io.cc  board_io.h  comm_mode.cc  comm_mode.h  detection_state.h  dreame_protocol.cc  dreame_protocol.h  idf_component.yml  license_console.cc  license_console.h  rs485_protocol.cc  rs485_protocol.h  snore_engine.cc  snore_engine.h
